@startuml
namespace Players{
    class AbsorbController {
    Update() : void
    Absorb() : void
}
MonoBehaviour <|-- AbsorbController
class DivideController {
    DividableSize : float = 1
    InjectionPower : float = 10
    Start() : void
    Update() : void
    + HalfAreaSide(size:float) : float
    + Divide() : void
}
MonoBehaviour <|-- DivideController
class PlayerMover {
    Update() : void
}
MonoBehaviour <|-- PlayerMover
PlayerMover --> "timer" Timer
note bottom of AbsorbController : 合体クラス
note bottom of DivideController : 分裂クラス
note top of PlayerMover : 移動用クラス
}
@enduml


